--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - deploy:
           name: Push app Docker image
           command: |
-            docker login -e $DOCKERHUB_EMAIL -u $DOCKERHUB_USER_ID -d $DOCKERHUB_PWD
+            docker login -u $DOCKERHUB_USER_ID -p $DOCKERHUB_PWD
             docker tag dockerapp_dockerapp $DOCKERHUB_USER_ID/dockerapp:$CIRCLE_SHA1
             docker tag dockerapp_dockerapp $DOCKERHUB_USER_ID/dockerapp:latest
             docker push $DOCKERHUB_USER_ID/dockerapp:$CIRCLE_SHA1
